# affordance-mesa

./: .gitignore  ABM_iiasa_may1_with_ev_literature.tex  EV_MODEL_DESCRIPTION.md  EV_MODEL_EXTENSION_CODING_BRIEF.md  Eva_JorgeNike_versao13.tex  README.md  VALIDATION.md  pyproject.toml  requirements.txt
affordance_mesa/: __init__.py  agents.py  ev_agents.py  ev_costs.py  ev_model.py  ev_params.py  model.py  networks.py  params.py  solara_app.py
diagrams/: ev_adoption_mechanics.md
ev_adoption_models/: EV_ADOPTION_MODELS_REVIEW.md  EV_ADOPTION_MODELS_REVIEW_body.tex  EV_ADOPTION_MODELS_REVIEW_selected.tex  PORTUGAL_CALIBRATION_DATA.md  SOTA_BENCHMARK_REPORT.md  V12_DRAFT_VS_CURRENT_MODEL.md  fields.yaml  outline.yaml
ev_adoption_models/results/: Agentbased_EV_adoption_models.json  Charging_infrastructure_and_spatial_EV_adoption_models.json  Diffusion_and_system_dynamics_EV_adoption_models.json  Discrete_choice_and_hybrid_choice_EV_adoption_models.json  Policy_and_total_cost_of_ownership_EV_adoption_models.json  Social_network_and_peer_effects_EV_adoption_models.json
notebooks/: ev_scenarios.ipynb  june2.ipynb
scripts/: calibrate_portugal.py  make_v13_figures.py  run_ev_experiments.py  run_ev_model.py  run_experiments.py  run_model.py  validate_against_netlogo.py
tests/: test_ev_experiments.py  test_ev_model.py  test_ev_scenarios.py  test_model.py  test_networks.py  test_notebook.py  test_solara_app.py
