[project]
name = "affordance-mesa"
version = "0.1.0"
description = "Mesa reimplementation of the Affordance Landscape sustainable behaviour ABM"
requires-python = ">=3.10"
dependencies = [
  "mesa>=3.2",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "solara>=1.50",
]

[tool.setuptools.packages.find]
include = ["affordance_mesa*"]

[tool.pytest.ini_options]
pythonpath = ["."]
